Fix footer alignment

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -22,6 +22,7 @@ body {
     line-height: 1.5;
     min-height: 100vh;
     display: grid;
+    grid-template-rows: 1fr auto;
     place-items: center;
     background-color: v.$light-gray;
     font-size: t.$body-font-size;
